<resources>
    <string name="app_name">BitLoom</string>
    <string name="default_web_client_id">565132065725-n2opqq4dh1fgks8et7d2nnru5r8fhnj8.apps.googleusercontent.com</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="log_out">Log Out</string>
    <string name="startupCheck">Являетесь ли стартапом</string>
    <string name="yesRu">Да</string>
    <string name="noRu">Нет</string>
    <string name="homeRu">Главная</string>
    <string name="profileRu">Профиль</string>
    <string name="accountRu">Аккаунт</string>
    <string name="profile">Profile</string>
    <string name="users">Users</string>
    <string name="home">Home</string>
    <string name="passwordRu">Пароль</string>
    <string name="repeatPasswordRu">Повторите пароль</string>
    <string name="savingRu">Сохранение...</string>
    <string name="editingRu">Редактирование</string>
    <string name="registerRu">Зарегистрироваться</string>
    <string name="clickToLoginRu">Уже есть аккаунт</string>
    <string name="loginRu">Войти</string>
    <string name="clickToRegisterRu">Еще нет аккаунта</string>
    <string name="loginTitleRu">Вход</string>
    <string name="registerTitleRu">Регистрация</string>
    <string name="linksRu">Для связи</string>
    <string name="descHintRu">Введите описание проекта</string>
    <string name="changePicRu">Изменить фото</string>
    <string name="changeProjectNameRu">Введите имя проекта</string>
    <string name="changePicDialog">Рекомендуется разрешение 1080 х 540 и размер менее 10 МБ</string>
    <string name="gotItRu">Понятно</string>
    <string name="contactsRu">Контакты</string>
    <string name="numberHintRu">Введите мобильный телефон</string>
    <string name="numberAdtnHintRu">Введите дополнительный телефон</string>
    <string name="websiteHintRu">Введите сайт</string>
    <string name="emailHintRu">Введите контактный email</string>
    <string name="createNewPostRu">Создать новый пост</string>
    <string name="newPostRu">Новый пост</string>
    <string name="postHintRu">Чем вы хотите поделиться?</string>
    <string name="loadingRu">Загрузка...</string>
    <string name="logoutRu">Выйти из аккаунта</string>
    <string name="addContactRu">Добавить контакт</string>
    <string name="AddLinkRu">Добавить ссылку</string>
    <string name="WebsiteLinkHintRu">Введите ссылку на ваш сайт</string>
    <string name="PhoneNumHintRu">Введите номер телефона</string>
    <string name="FavouriteRu">Избранное</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchRu">Поиск</string>
    <string name="newPostsRu">Новые посты</string>
    <string name="followPostsRu">Ваши подписки</string>
    <string name="appName">BitLoom</string>
    <string name="subscribeRu">Подписаться</string>
    <string name="youSubscribedRu">Вы подписаны</string>
    <string name="unsubRu">Отписаться</string>
    <string name="listIsEmptyRu">Список пуст</string>

</resources>