<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background2"
    tools:context=".RegisterActivity">
    <!--
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/login_background"/>
            -->
<androidx.cardview.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    app:cardCornerRadius="40dp">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="520dp"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/registerTitleRu"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="#2CC3D6"
                android:textStyle="bold"/> <!--#9d58f3-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="#d2b7ff"
                android:textColorHint="#d2b7ff"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:layout_margin="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="#d2b7ff"
            android:hint="@string/passwordRu"
            android:textColorHint="#d2b7ff"
            android:inputType="textPassword"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repeatPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="#d2b7ff"
                android:hint="@string/repeatPasswordRu"
                android:textColorHint="#d2b7ff"
                android:inputType="textPassword"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:layout_margin="10dp">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/typeOfUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/startupCheck"
            android:textColorHint="#aa75eb"
            android:textOff="@string/noRu"
            android:textOn="@string/yesRu"
            app:showText="true"
            app:switchTextAppearance="@style/switchTextAppearance"
            android:theme="@style/switchStyle"/>

    </LinearLayout>

        <Button
            android:id="@+id/btn_Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#9d58f3"
            android:text="@string/registerRu"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/loginNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/clickToLoginRu"
            android:textColor="#2CC3D6"
            android:textStyle="bold" />






        <!--
                    <com.google.android.gms.common.SignInButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginRight="50dp"
                        android:layout_marginLeft="50dp"
                        android:layout_marginBottom="10dp"
                        android:id="@+id/sign_in_button"/>
            </FrameLayout> -->

    </LinearLayout>

</androidx.cardview.widget.CardView>


</RelativeLayout>