<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".fragments.GuestHomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/searchRu"
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:theme="@style/textInputLayoutDataChange"
            style="@style/textInputLayoutDataChange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/homeToggleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="true"
            android:layout_marginTop="10dp"
            style="@style/homeToggleButton">
            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newPostsRu"
                android:layout_weight="1"
                />
            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/followPostsRu"
                android:layout_weight="1"
                />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/postsRV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</ScrollView>